Fix extra padding in i-box content

--- a/indico/htdocs/sass/partials/_boxes.scss
+++ b/indico/htdocs/sass/partials/_boxes.scss
@@ -63,6 +63,7 @@
     color: $dark-gray;
 }
 
+
 // ============================================================================
 // Boxes
 // ============================================================================
@@ -85,10 +86,11 @@
     }
 
     .i-box-footer {
+        background-color: $light-gray;
+        box-shadow: inset 0px 15px 20px -20px $dark-gray;
         overflow: auto;
         padding: 10px;
-        margin: 20px -10px -10px -10px;
-        background-color: $light-gray;
+        margin: 10px -10px -10px;
     }
 }
 
@@ -143,19 +145,11 @@
     }
 
     .i-box-content {
-        padding: 1em;
         margin-top: 20px;
         > .empty {
             @extend %i-box-empty;
         }
     }
-}
-
-.i-box .i-box-footer {
-    background: $light-gray;
-    box-shadow: inset 0px 15px 20px -20px $dark-gray;
-    margin: 10px -10px -10px;
-    padding: 10px;
 }
 
 .i-box.no-padding {
@@ -187,8 +181,6 @@
         }
     }
 }
-
-
 
 
 // ============================================================================
